Add lasagna picture to the recipes page
Upload the picture and add it to the page.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
+    <img src="../images/lasagna.jpeg" height="310" alt="Baked lasagna on a table cloth, candle and plate in the background.">
+
 
     <a href="../index.html">Home</a>
 </body>
