Add headings and lists

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,17 @@
 <body>
     <h1>Lasagna Recipe</h1>
     <img src="../images/lasagna.jpeg" height="310" alt="Baked lasagna on a table cloth, candle and plate in the background.">
-
+    <h2>Description</h2>
+    <h2>Ingredients</h2>
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+        <li></li>
+    </ol>
 
     <a href="../index.html">Home</a>
 </body>
