--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,15 +9,19 @@
     <h1>Lasagna Recipe</h1>
     <img src="../images/lasagna.jpeg" height="310" alt="Baked lasagna on a table cloth, candle and plate in the background.">
     <h2>Description</h2>
+    <p>Lasagna recipe description.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
+        <li>Lasagna plates</li>
+        <li>Tomato sauce</li>
+        <li>Vegetables</li>
+        <li>Cheese</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
+        <li>Make bechamel sauce</li>
+        <li>Make tomato sauce</li>
+        <li>Make lasagna and bake it in the oven.</li>
     </ol>
 
     <a href="../index.html">Home</a>
