Add recipe and backlinks for sushi and pancakes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -21,7 +21,7 @@
     <ol>
         <li>Make bechamel sauce</li>
         <li>Make tomato sauce</li>
-        <li>Make lasagna and bake it in the oven.</li>
+        <li>Make lasagna and bake it in the oven</li>
     </ol>
 
     <a href="../index.html">Home</a>
