--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/sushi.html">Sushi</a>
+    <a href="recipes/pancakes.html">Pancakes</a>
 </body>
 </html>
